# libreplaygain

./: CMakeLists.txt
include/replaygain/: gain_analysis.h
libreplaygain/: CMakeLists.txt  Makefile.am  gain_analysis.c  libreplaygain.vcproj
libreplaygain/src/: CMakeLists.txt  gain_analysis.c
src/: CMakeLists.txt
